@@ -14,7 +14,7 @@
 #include <KIcon>
 #include <KListWidget>
 #include <KUrlRequester>
-#include <QMessageBox>
+#include <KMessageBox>
 
 
 DirOpener::DirOpener( Config *_config, Mode _mode, QWidget *parent, Qt::WFlags f )
@@ -178,14 +178,23 @@ void DirOpener::addClicked()
         if( fileTypes->item(i)->checkState() == Qt::Checked ) selectedCodecs += fileTypes->item(i)->text();
     }
 
-    emit accept();
+//     emit accept();
     if( mode == Convert )
     {
-        emit done( uDirectory->url(), cRecursive->checkState() == Qt::Checked, selectedCodecs, options->currentConversionOptions() );
+        if( options->currentConversionOptions() )
+        {
+            emit done( uDirectory->url(), cRecursive->checkState() == Qt::Checked, selectedCodecs, options->currentConversionOptions() );
+            accept();
+        }
+        else
+        {
+            KMessageBox::error( this, i18n("No conversion options selected.") );
+        }
     }
     else if( mode == ReplayGain )
     {
         emit done( uDirectory->url(), cRecursive->checkState() == Qt::Checked, selectedCodecs );
+        accept();
     }
 }
 
