@@ -167,8 +167,15 @@ void FileOpener::fileDialogAccepted()
 
 void FileOpener::okClickedSlot()
 {
-    emit done( urls, options->currentConversionOptions() );
-    accept();
+    if( options->currentConversionOptions() )
+    {
+        emit done( urls, options->currentConversionOptions() );
+        accept();
+    }
+    else
+    {
+        KMessageBox::error( this, i18n("No conversion options selected.") );
+    }
 }
 
 void FileOpener::showHelp()
